# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: hexlet-check.yml  main.yml
gendiff/: __init__.py  build_diff.py  builder.py  cli.py  consts.py  diff.py  gendiff.py  generate_diff.py  loader.py  parser.py  utils.py
gendiff/formater/: stylish.py
gendiff/formatters/: __init__.py  json_format.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py
tests/fixtures/: json_format_output.txt
tests/test_data/: result_json_yaml.txt
